VehicleModule: documentation
